<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">POPULAR MOVIES</string>
    <string name="super_duo1">STOCK HAWK</string>
    <string name="super_duo2">BUILD IT BIGGER</string>
    <string name="ant_terminator">MAKE YOUR APP MATERIAL</string>
    <string name="materialize">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
